--- a/springboot-dubbo-nacos-seata/pom.xml
+++ b/springboot-dubbo-nacos-seata/pom.xml
@@ -35,6 +35,7 @@
         <nacos-client.verison>1.1.3</nacos-client.verison>
         <seata.version>1.3.0</seata.version>
         <netty.version>4.1.42.Final</netty.version>
+        <mysql.version>5.1.47</mysql.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -160,7 +161,7 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.47</version>
+                <version>${mysql.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
