--- a/springboot-nacos-seata-sample/account-service/src/main/resources/application.yaml
+++ b/springboot-nacos-seata-sample/account-service/src/main/resources/application.yaml
@@ -1,27 +1,28 @@
+
 server:
-  port: 8101
-#====================================stream =============================================
+  port: 8102
+#====================================spring 配置 =============================================
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/order-service?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+    url: jdbc:mysql://127.0.0.1:3306/account-service?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
     username: root
     password: abc123
   application:
-    name: dubbo-order-example
+    name: dubbo-account-example
 
-#====================================Dubbo config===============================================
+#====================================Dubbo 配置===============================================
 dubbo:
   application:
-    id: dubbo-order-example
-    name: dubbo-order-example
+    id: dubbo-account-example
+    name: dubbo-account-example
     qosEnable: false
   protocol:
     id: dubbo
     name: dubbo
-    port: 20880
+    port: 20883
   registry:
-    id: dubbo-order-example-registry
+    id: dubbo-account-example-registry
     address: nacos://127.0.0.1:8848
   config-center:
     address: nacos://127.0.0.1:8848
@@ -30,7 +31,7 @@ dubbo:
 #====================================mybatis-plus config===============================================
 mybatis-plus:
   mapper-locations: classpath*:/mapper/*.xml
-  typeAliasesPackage: io.seata.samples.integration.*.entity
+  typeAliasesPackage: site.ilemon.seata.*.entity
   configuration:
     map-underscore-to-camel-case: true
   global-config:
@@ -54,11 +55,11 @@ seata:
       server-addr: 127.0.0.1:8848
       username: nacos
       password: nacos
-      group: A_GROUP
+      group: DEFAULT_GROUP
   config:
     nacos:
       server-addr: 127.0.0.1:8848
       username: nacos
       password: nacos
-      group: A_GROUP
+      group: DEFAULT_GROUP
     type: nacos
